Fix firefox align issue. This makes app-ballance look equal in ff and chrome.

--- a/front/src/app/components/layouts/app/sub/balance/index.less
+++ b/front/src/app/components/layouts/app/sub/balance/index.less
@@ -14,6 +14,7 @@
         color: @color-font-gray;
         padding: 0;
         margin: 0 10px 0 0;
+        vertical-align: top;
     }
 
     &__value {
